--- a/index.html
+++ b/index.html
@@ -220,6 +220,9 @@
         <!--------------------- cursor --------------------->
         <div class="cursor"></div>
 
+        <!--------------------- Back to top button --------------------->
+        <a id="button">➜</a>
+
         <!--------------------- javascript --------------------->
         <script src="portfolio.js"></script>
     </body>
@@ -229,7 +232,6 @@
 <!-- 
     Chose a faire :
     2. Réaliser la nav burger
-    5. Mettre fleche en bas a droite, lorsque l'on clique dessus, ca nous permet de remonter en haut de la page
     3. Relier le formulaire à ma base de donnée
     6. Animation du logo avec le loader d'entrée
     
